Spacing issues

--- a/css/local.css
+++ b/css/local.css
@@ -22,10 +22,12 @@ html, body {
 #greeting > h1
 {
 	font-size: 3.3em;
+	padding-bottom: 0.2em;
 }
 
 #selfblurb > p{
 	font-size: 1.5em;
+	padding-bottom: 1em;
 }
 
 .centre{
@@ -56,5 +58,14 @@ html, body {
 	#nav{
 		height: inherit;
 	}
+}
 
+@media (min-width: 768px) and (max-width: 992px){
+
+	#selfportrait > img
+	{
+		width:  240px;
+		height: 260px;
+		border-radius: 80px;
+	}
 }
